--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,6 +1,9 @@
 name: Check config
 on: push
 
+env:
+  NONINTERACTIVE: 1
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -8,7 +11,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Install homebrew
-        run: NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+        run: |
+          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
       - name: Install dnscontrol
         run: |
           brew update
