--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,12 +10,12 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - name: Install homebrew
-        run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-      - name: Install dnscontrol
-        run: |
-          brew update
-          brew install dnscontrol
+      # - name: Install homebrew
+      #   run: |
+      #     /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+      # - name: Install dnscontrol
+      #   run: |
+      #     brew update
+      #     brew install dnscontrol
       - name: Run dnscontrol check
         run: ls -a
