--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,6 +1,9 @@
 name: Check config
 on: push
 
+env:
+  HETZNER_API_TOKEN: ${{ secrets.HETZNER_API_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,3 +22,15 @@ jobs:
           -u $(id -u ${USER}):$(id -g ${USER}) \
           stackexchange/dnscontrol \
           check
+      - name: Run dnscontrol preview
+        run: |
+          docker run --rm \
+          -t \
+          -v $(pwd)/dnsconfig.js:/dns/dnsconfig.js \
+          -v $(pwd)/creds.json:/dns/creds.json \
+          -v $(pwd)/spfcache.updated.json:/dns/spfcache.updated.json \
+          -v $(pwd)/spfcache.json:/dns/spfcache.json \
+          -v $(pwd)/zones/:/dns/zones/ \
+          -u $(id -u ${USER}):$(id -g ${USER}) \
+          stackexchange/dnscontrol \
+          preview
