--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,13 @@
 name: Check config
-on: push
+
+on:
+  push:
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - main
+
 
 env:
   HETZNER_API_TOKEN: ${{ secrets.HETZNER_API_TOKEN }}
